examples/test/testpolicy8680.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8680
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key13: value37
      key17: value22
      key23: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value4
          key33: value47
          key17: value28
      podSelector:
        matchLabels:
          key2: value19
          key31: value38
